INCLUDES = -I@srcdir@/../ -I@srcdir@/../../common/
noinst_LIBRARIES = libDebugTools.a

libDebugTools_a_SOURCES = \
cpuopsDebug.cpp  Debug.h.bak  DisR3000asm.cpp  DisVU0Micro.cpp  DisVUops.h \
cpuopsDebug.h  DisASM.h     DisR5900asm.cpp  DisVU1Micro.cpp \
Debug.h        DisR3000A.cpp  DisR5900.cpp     DisVUmicro.h
